--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "mes-app",
   "private": true,
@@ -5,9 +6,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
-    "server": "node server/index.js"
+    "start": "node server/index.js",
+    "gcp-build": "npm run build"
   },
   "dependencies": {
     "cors": "^2.8.5",
